--- a/src/Layout/Sidebar/Sidebar_style.css
+++ b/src/Layout/Sidebar/Sidebar_style.css
@@ -19,10 +19,12 @@
   background: var(--bg-primary);
 } */
 
+
+
 nav {
     position: fixed;
     width: 60px;
-    height: 100%;
+    height: 100vh;
     /* background: var(--bg-primary); */
     background: var(--primary-bg-color);
     transition: 0.5s;
@@ -129,7 +131,7 @@ nav ul li a.toggle {
     position: relative;
     height: 100vh;
     left: 60px;
-    width: calc(100% - 80px);
+    width: calc(100% - 60px);
     transition: all 0.5s ease;
     display: flex;
     flex-direction: column;
@@ -216,3 +218,25 @@ nav ul li a.toggle {
   F58753 - orange
   #183153 - blue
 } */
+
+
+.sidebar-footer {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    text-align: center;
+}
+
+.sidebar-footer img {
+    width: 100%;
+    max-width: 150px;
+    height: auto;
+    opacity: 0.8;
+    transition: opacity 0.3s;
+}
+
+.sidebar-footer img:hover {
+    opacity: 1;
+}
